
    * Fixed bug 13: "No math overflow checking in battle" [Mike Caron]

    * Worked around bug 78: "Using Custom under DosBox dosen't allow for
      browsing certain areas." by avoiding the use of VAL() which is
      buggy in some versions of DosBox and QEMU [James Paige]

  * New Plotscripting Commands

    * "cancel map name display" [James Paige]
    * "seconds of play", "set days of play", "set hours of play",
      "set minutes of play", "set seconds of play" [Mike Caron]
    * "read NPC" (counterpart of alter NPC) [James Paige]
    * "set hero level", "give experience", "hero levelled",
      "spells learnt" [Ralph Versteegen]
    * "get damage cap", "set damage cap" [Mike Caron]
    * "get music volume", "set music volume" [Ralph Versteegen]

  * Stuff only Developers Will Notice
  
    * More attack bitsets [Mike Caron]

October 03 2005 [rusalka]

  * Bug-Fixes

    * Fixed bug 18: "In the map editor, CTRL+F doesn't use default
      passability" [Ralph Versteegen]

    * Fixed bug 76: "Hitting two keys at the same time allows you to
      overflow text-entry fields" [James Paige]

    * Fixed a bug that allowed argument values to pre-fill local
      variables in scripts that did not have enough arguments declared
      (It is now safe to assume that all your local variables will
      start out set to zero) [James Paige]

    * Fixed bug 81: "fight formation() with an invalid formation would
      start a battle which would immediately end" [Yuriy]

    * To bring up the Joystick calibration screen, you should now
      press CTRL+J rather than just J

    * Fixed bug 85: "menu called when exiting a script triggered menu or
      screen with ESC" [Yuriy and Ralph Versteegen]

    * Fixed bug 86: "Foot offset is not taken into account when culling
      npcs and heroes to draw onscreen" [Ralph Versteegen]

    * Fixed bug 88: "A script buffer overflow crashes or freezes game.exe
      instead of displaying an error message" [Ralph Versteegen]
